--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <junit.version>4.12</junit.version>
         <jackson.version>2.9.0</jackson.version>
         <slf4j.version>1.7.7.jbossorg-1</slf4j.version>
+        <lombok.version>1.16.16</lombok.version>
+        <httpclient.version>4.5.3</httpclient.version>
     </properties>
 
     <dependencies>
@@ -72,7 +74,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
+            <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
         </dependency>
     </dependencies>
 
