--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <guava.version>21.0</guava.version>
         <junit.version>4.12</junit.version>
         <jackson.version>2.9.0</jackson.version>
-        <slf4j.version>1.7.7.jbossorg-1</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <lombok.version>1.16.16</lombok.version>
         <httpclient.version>4.5.3</httpclient.version>
     </properties>
