--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.moysklad.api</groupId>
     <artifactId>java-remap-sdk</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-ALPHA2</version>
 
     <distributionManagement>
         <repository>
