--- a/pom.xml
+++ b/pom.xml
@@ -75,12 +75,17 @@
             <version>4.5.5</version>
         </dependency>
 
-        <!-- LOG4J -->
+        <!-- LOGGING -->
 
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.8.2</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
         </dependency>
 
         <!-- FOR TESTS -->
