--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,33 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.moysklad.api</groupId>
-    <artifactId>java-remap-sdk</artifactId>
-    <version>3.1-BETA</version>
+    <artifactId>api-remap-1.2-sdk</artifactId>
+    <version>2.0-SNAPSHOT</version>
+
+    <name>SDK for MoySklad / MyStore remap api</name>
+    <description>Simplest way to work with entities like assortment and documents from moysklad.ru and mystorehq.com</description>
+    <url>https://dev.moysklad.ru/doc/api/remap/1.2/</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Lognex, LLC</name>
+            <email>support@moysklad.ru</email>
+            <url>https://dev.moysklad.ru/doc/api/remap/1.2/</url>
+            <organizationUrl>https://www.moysklad.ru</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/moysklad/java-remap-1.2-sdk.git</connection>
+        <url>https://github.com/moysklad/java-remap-1.2-sdk.git</url>
+    </scm>
 
     <distributionManagement>
         <repository>
