--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.moysklad.api</groupId>
-    <artifactId>api-remap-1.2-sdk</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <artifactId>java-remap-sdk</artifactId>
+    <version>1.14-release</version>
 
     <name>SDK for MoySklad / MyStore remap api</name>
     <description>Simplest way to work with entities like assortment and documents from moysklad.ru and mystorehq.com</description>
