--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.moysklad.api</groupId>
     <artifactId>java-remap-sdk</artifactId>
-    <version>1.14-release</version>
+    <version>2.0-SNAPSHOT</version>
 
     <name>SDK for MoySklad / MyStore remap api</name>
     <description>Simplest way to work with entities like assortment and documents from moysklad.ru and mystorehq.com</description>
