--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.moysklad.api</groupId>
     <artifactId>api-remap-1.2-sdk</artifactId>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
 
     <name>SDK for MoySklad / MyStore remap api</name>
     <description>Simplest way to work with entities like assortment and documents from moysklad.ru and mystorehq.com</description>
@@ -29,7 +29,7 @@
     <scm>
         <connection>scm:git:https://github.com/moysklad/java-remap-1.2-sdk.git</connection>
         <url>https://github.com/moysklad/java-remap-1.2-sdk.git</url>
-      <tag>2.3-release</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
