MC-41601 MC-44493 Добавлен SNAPSHOT репозиторий для МоегоСклада.

--- a/pom.xml
+++ b/pom.xml
@@ -132,9 +132,14 @@
             <distributionManagement>
                 <repository>
                     <id>artifactory</id>
-                    <name>Moysklad Development Repository</name>
+                    <name>Moysklad Development Release Repository</name>
                     <url>https://repo.moysklad.ru/artifactory/libs-release-local/</url>
                 </repository>
+                <snapshotRepository>
+                    <id>artifactory</id>
+                    <name>Moysklad Development Snapshot Repository</name>
+                    <url>https://repo.moysklad.ru/artifactory/libs-snapshot-local/</url>
+                </snapshotRepository>
             </distributionManagement>
         </profile>
         <profile>
