--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <publishingRepo>https://oss.sonatype.org/</publishingRepo>
+        <artifactoryRepo/>
     </properties>
 
     <dependencies>
@@ -128,12 +129,12 @@
                 <repository>
                     <id>artifactory</id>
                     <name>Moysklad Development Release Repository</name>
-                    <url>https://repo.moysklad.ru/artifactory/libs-release-local/</url>
+                    <url>${artifactoryRepo}/artifactory/libs-release-local/</url>
                 </repository>
                 <snapshotRepository>
                     <id>artifactory</id>
                     <name>Moysklad Development Snapshot Repository</name>
-                    <url>https://repo.moysklad.ru/artifactory/libs-snapshot-local/</url>
+                    <url>${artifactoryRepo}/artifactory/libs-snapshot-local/</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
