--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.moysklad.api</groupId>
     <artifactId>api-remap-1.2-sdk</artifactId>
-    <version>7.2-SNAPSHOT</version>
+    <version>7.2</version>
 
     <name>SDK for MoySklad / MyStore remap api</name>
     <description>Simplest way to work with entities like assortment and documents from moysklad.ru and mystorehq.com</description>
@@ -29,7 +29,7 @@
     <scm>
         <connection>scm:git:https://github.com/moysklad/java-remap-1.2-sdk.git</connection>
         <url>https://github.com/moysklad/java-remap-1.2-sdk.git</url>
-        <tag>HEAD</tag>
+        <tag>api-remap-1.2-sdk-7.2</tag>
     </scm>
 
     <properties>
@@ -38,7 +38,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <publishingRepo>https://oss.sonatype.org/</publishingRepo>
-        <artifactoryRepo/>
+        <artifactoryRepo />
     </properties>
 
     <dependencies>
