--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.moysklad.api</groupId>
     <artifactId>api-remap-1.2-sdk</artifactId>
-    <version>8.5-SNAPSHOT</version>
+    <version>8.5</version>
 
     <name>SDK for MoySklad / MyStore remap api</name>
     <description>Simplest way to work with entities like assortment and documents from moysklad.ru and mystorehq.com</description>
@@ -29,7 +29,7 @@
     <scm>
         <connection>scm:git:https://github.com/moysklad/java-remap-1.2-sdk.git</connection>
         <url>https://github.com/moysklad/java-remap-1.2-sdk.git</url>
-        <tag>HEAD</tag>
+        <tag>api-remap-1.2-sdk-8.5</tag>
     </scm>
 
     <properties>
